更新机器学习和数据库笔记

--- a/docs/Course/机器学习/笔记.md
+++ b/docs/Course/机器学习/笔记.md
@@ -753,3 +753,124 @@ ELMo的问题：只能捕捉局部上下文，串行执行。
 提供给BERT的输入：token embedding+segment embedding+position embedding
 
 
+## 推荐系统
+
+推荐系统的**主要目的**是通过分析用户的行为和偏好，向用户提供个性化的内容或物品建议，从而提升用户体验和满意度。
+
+**应用**：电子商务，新闻，视频，音乐，社交网络，广告
+
+推荐系统中有Utility Matrix，表示用户对物品的偏好。
+
+![](img/2024-12-31-15-31-25.png)
+
+推荐系统的核心问题：
+
+- 如何获得Utility Matrix
+- 如何根据已知偏好预测位置偏好
+- 如何评估推荐方法好坏
+
+对于第一个问题：有两种方法，显示要求评分（这并不太可能实现），还有隐式的收集，从用户的行为中学习排序
+
+对于第二个问题：Utility Matrix有几个特点，一是Sparsity（稀疏），二是Cold Start（数据有限），三是新物品或新用户的加入时如何推荐
+
+### 基于内容的推荐
+
+主要的想法：向顾客x推荐和之前他高评分/喜欢的物品
+
+比如：向用户推荐之前看过的演员的作品/之前看过的导演的作品，博客/新闻推荐相似的内容
+
+![](img/2024-12-31-15-39-20.png)
+
+
+Item profile: 一个包含物品特征的向量，使用IF-IDF等方法识别最重要的特征
+
+User profile: 通过对已评分物品的向量进行average，得到用户偏好，或者根据和平均物品评分的差异得到用户偏好
+
+预测时，使用余弦相似度，假设User Profile $\mathbf x$ 和 Item Profile $\mathbf y$ ，他们的相似度为$\cos(\mathbf x, \mathbf y)$
+
+优点：
+
+- 不需要其他用户的数据，没有冷启动和稀疏的问题
+- 可以对品味独特的用户也进行推荐
+- 可以推荐新的/冷门的物品（没有first-rater的问题）
+- 可解释性
+
+缺点：
+
+- 找到合适的特征是困难的
+- 如何对新用户进行推荐（如何构建用户profile）
+- Overspecialization（过度专业化），比如用户喜欢看科幻电影，但是推荐系统只推荐科幻电影，用户可能就不愿意使用推荐系统了。
+
+### 用户-用户协同过滤
+
+可以借助其他用户的评价，对基于内容的推荐系统进行改进。
+
+![](img/2024-12-31-16-01-02.png)
+
+如何找到相似的用户：记$r_x$是用户x的rating
+
+- 余弦相似度$sim(x,y) = \frac {r_x^T r_y} {\|r_x\| \|r_y\|}$
+- $S_{xy}$ 是用户x和用户y共同评分的物品
+- $sim(x,y)=\frac{\sum_{s\in S_{xy}(r_{xs}-\overline r_x)(r_{ys}-\overline r_y)}} {\sqrt{\sum_{s\in S_{xy}}(r_{xs}-\overline r_x)^2}\sqrt{\sum_{s\in S_{xy}}(r_{ys}-\overline r_y)^2}}$
+- $\overline r_x$ 是用户x的平均评分
+- $sim(x,y)$越接近1越相关，越接近-1越不相关
+
+但是，协同过滤的问题在于，用户和物品的评分矩阵是稀疏的，所以相似度计算的准确性不高。并且矩阵应该是稀疏的，直接把空的位置视为0是不可取，解决方法是减掉行平均值，中心化数据后再计算余弦相似度。
+
+评价预测：
+
+$N$ 是k个和x最相似的用户的集合（且评价过物品i），下面是两种可能的预测方法（平均加权和相似度加权）
+
+$r_{xi} = \frac {1} {k} \sum_{y\in N} r_{yi}$
+
+或$r_{xi} = \frac {\sum_{y\in N} sim(x,y)r_{yi}} {\sum_{y\in N} sim(x,y)}$
+
+### 物品-物品协同过滤
+
+通过分析物品而不是用户的相似性进行协同过滤。
+
+可以使用相似的方法：
+
+![](img/2024-12-31-23-27-20.png)
+
+![](img/2024-12-31-23-58-52.png)
+
+
+一般的做法如下，会多一个baseline，一般是物品的全局得分。
+
+![](img/2024-12-31-23-38-14.png)
+
+Q: 但是协同过滤和基于内容的推荐非常相似，为什么基于内容的推荐需要特征选择而协同过滤不用？
+
+A: 协同过滤依赖于用户和物品的交互，而基于内容的推荐依赖于物品的特征。也就是说物品是什么样子的不关心，只关心人们对物品的评价。但是基于内容的推荐依赖于物品是什么样子的。
+
+
+协同过滤的问题：
+
+- 冷启动（推荐系统的冷启动问题是指在系统初始阶段或面对新用户、新物品时，由于缺乏足够的历史数据，难以进行有效推荐的情况）
+- 稀疏性
+- First rater（不能推荐一个没有被之前评分过的物品）
+- 流行偏见（更倾向于推荐流行物品）
+- 可扩展性（如果物品-用户矩阵很大就不能这么搞）
+
+### 基于矩阵分解的做法
+
+将效用矩阵Utility Matrix分解为两个低维矩阵
+
+![](img/2025-01-01-00-18-49.png)
+
+可以使用SGD优化这个目标函数，然后训练完毕后就可以使用$p_u^T q_i$来预测用户u对物品i的评分。
+
+### 推荐效果评估
+
+指标有
+
+RMSE: 均方根误差
+
+P@K：推荐列表中前K个物品中，用户喜欢的概率
+
+召回率：推荐列表中用户喜欢的物品的比例
+
+可以这样子划分测试集
+
+![](img/2025-01-01-00-22-10.png)
