更新数据库笔记

--- a/docs/Course/数据库/事务管理.md
+++ b/docs/Course/数据库/事务管理.md
@@ -3,6 +3,7 @@
 术语事务指的是构成单一的逻辑工作单元的操作的集合。
 
 事务的ACID特性：
+
 - 原子性（Atomicity）：事务是不可分割的工作单元，要么全部执行，要么全部不执行。
 - 一致性（Consistency）：事务执行前后，数据库的状态必须保持一致。
 - 隔离性（Isolation）：多个事务并发执行时，每个事务的执行不受其他事务的影响。
@@ -197,6 +198,8 @@
 - 否则执行write操作并将W-timestamp(Q)更新。
 
 事务$T_i$如果由于发出read或者write操作而被并发控制机制回滚，那么系统回复于它一个**新的**时间戳，并重新启动它。
+
+该协议保证没有死锁，因为没有事务会发生等待。但是如果有一系列冲突的短事务引起长事务的反复重启，可能会导致长事务饿死。
 
 ## 19章 - 恢复系统
 
