--- a/docs/Course/数据库/查询处理和优化.md
+++ b/docs/Course/数据库/查询处理和优化.md
@@ -10,6 +10,27 @@
 
 ## 选择运算
 
-- A1：线性索引，进行一次额外搜索找第一个块。然后顺序访问所有的块。
-- 
+选择运算有很多种，根据不同的搜索算法，和不同的存储数据结构，有不同的代价。
+
+![](img/2025-01-02-00-43-24.png)
+
+> 图中的$t_S$是磁盘寻道时间，$t_T$是磁盘传输时间，$b_r$是磁盘块数。
+> $h_i$是索引高度
+
+只要提前知道匹配元组的数量，查询优化器就可以根据代价估计在使用辅助索引和使用线性搜索之间进行选择。但是经常无法精确得知。
+
+PostgreSQL使用位图索引扫描的混合算法。获取辅助索引块，但不直接获取，而是标记位图，然后对位图中为1的块进行线性搜索。是一种折中的算法。
+
+而对于复杂的选择，比如包含合取和析取，还有否定等，有其他的方法。
+
+使用合取举例：
+
+- A7(使用一个索引的合取选择)：判断对于其中一个简单条件中的属性是否存在一条存取路径可用。如果可用就用A2~A6的一种选择算法来检索所有记录，再在内存中进行剩下是否满足的判断。
+- A8（使用组合索引）
+- A9（使用标识交集的合取选择）各个条件涉及的字段上都带有记录指针的索引，该算法对每个索引进行扫描，以获取指向满足单个条件的元组的指针。所有指针的交集就是满足合取条件的元组的指针集合。
+- A10（使用标识并集的析取选择）如果析取条件中涉及的属性都带有记录指针的索引，则可以对每个索引进行扫描，以获取指向满足单个条件的元组的指针。所有指针的并集就是满足析取条件的元组的指针集合。
+
+## 排序
+
+
 
