更新数据库,算法笔记

--- a/docs/Course/数据库/事务管理.md
+++ b/docs/Course/数据库/事务管理.md
@@ -251,7 +251,7 @@
 
 - 将当前位于主存的所有日志记录输出到稳定存储器。
 - 将所有修改过的缓冲块输出到磁盘
-- 写入一条<checkpoint L>的日志记录。
+- 写入一条 $<checkpoint L>$ 的日志记录。
 
 检查点执行过程中，不允许事务执行任何更新操作。
 
