--- a/docs/Course/数据库/引言与关系模型.md
+++ b/docs/Course/数据库/引言与关系模型.md
@@ -60,7 +60,7 @@ DBMS的五个主要职责:
 
 超码：一个或多个属性，组合在一起可以在一个关系中，唯一标识出一个元组。
 
-候选码：最小超码
+候选码：最小超码（**这里的最小的定义是，去掉里面的任何一个元素后，闭包不再是整个集合**）
 
 主码：数据库设计者选择的一个候选码，作为表的唯一标识
 
