更新数据库笔记, 增加部分重点记录

--- a/docs/Course/数据库/引言与关系模型.md
+++ b/docs/Course/数据库/引言与关系模型.md
@@ -42,6 +42,7 @@ DBMS的五个主要职责:
 - 备份与恢复
 
 数据库引入空值的原因：
+
 - 未知或不适用，某些信息可能无法现在就获取，或者某些信息对于特定的记录可能不适用
 - 数据不一定是完好的，可能缺失一部分
 
@@ -60,13 +61,13 @@ DBMS的五个主要职责:
 
 超码：一个或多个属性，组合在一起可以在一个关系中，唯一标识出一个元组。
 
-候选码：最小超码（**这里的最小的定义是，去掉里面的任何一个元素后，闭包不再是整个集合**）
+候选码：最小超码（**这里的最小的定义是，去掉里面的任何一个元素后，闭包不再是整个集合，而不是元素个数最少！！！**）
 
 主码：数据库设计者选择的一个候选码，作为表的唯一标识
 
 外码：一个引用。$r_1$ 关系的A属性 到 $r_2$ 关系的B属性，则B是A的外码。即 $r_1$ 中的属性 A 的取值必须是B中的某个取值。$r_1$ 是引用关系，$r_2$ 是被引用关系。
 
-**注意，外码约束要求被引用属性构成引用关系上的主码。**
+**注意，外码约束要求被引用属性是那个表的主码。**
 
 ## 重点
 
