更新数据库笔记, 增加部分重点记录

--- a/docs/Course/数据库/事务管理.md
+++ b/docs/Course/数据库/事务管理.md
@@ -137,6 +137,13 @@
 
 ### 死锁处理
 
+死锁的产生条件：
+
+- 互斥
+- 持有等待
+- 不可抢占
+- 循环等待
+
 两种解决方法：一是死锁预防协议保证系统不进入死锁。二是允许系统进入死锁，使用死锁检测和死锁恢复。
 
 死锁预防：对封锁请求进行排序，或要求同时获得所有的锁来保证不会发生循环等待。另一种方法是每当等待有可能导致死锁时，它就执行事务回滚而不是等待锁。
