--- a/docs/Course/数据库/存储管理.md
+++ b/docs/Course/数据库/存储管理.md
@@ -31,7 +31,7 @@
 
 ### 堆文件组织
 
-在堆文件组织中，记录可以存储在对应于一个关系的文件中的任何位置。
+在堆文件组织中，记录**可以存储在对应于一个关系的文件中的任何位置**。
 
 一般使用自由空间图标识一个块中剩余自由空间的比例。可以有一级自由空间图和二级。
 
@@ -48,3 +48,16 @@
 大多数关系数据库系统将每个关系存储在一个单独的文件中，但是有些时候如果在单个块不止一个关系的记录会很有用。
 
 跟sql语句中的group by差不多，几个关系，按某个属性聚类放一块。
+
+## 重点
+
+1. 物理存储介质
+
+- 磁盘、ssd、内存、磁带的特点与比较
+- 存取时间模型：寻道时间、旋转延迟、传输时间
+
+2. 文件组织与页结构
+
+- 堆文件、顺序文件、散列文件、聚簇/非聚簇文件
+- 存储管理：页式存储、记录格式（定长/可变长）
+- 对文件/记录进行读写时的磁盘页数分析，常见的缓存替换策略（LRU/MRU）
