--- a/docs/Course/数据库/索引.md
+++ b/docs/Course/数据库/索引.md
@@ -16,7 +16,7 @@
 B+ Tree属于一种多级索引。它有几个性质：
 
 - 每个非叶子节点（root除外）有$\lceil n/2 \rceil$个到$n$个孩子，n对于特定的树是固定的
-- 根有2到n个孩子。
+- 根有2到n个孩子。（键值最多$n-1$个）
 - 叶节点内的码数在$\lceil (n-1)/2 \rceil$到$n-1$之间。
 - 同一层节点内的码的顺序是递增的。
 - 如果B+树是稠密索引，那么每个搜索码值都必须出现在某个叶节点中。
