修改一些渲染错误

--- a/docs/Course/机器学习/生成模型.md
+++ b/docs/Course/机器学习/生成模型.md
@@ -89,11 +89,114 @@ $$
 
 ## EM算法
 
+EM算法解决这么一个问题：已知联合分布$p(x,z)$，而优化目标是边缘分布：
 
+$$
+\theta = \arg \max_{\theta} \log p(x;\theta)
+$$
+
+EM算法将这个问题分为两步，E-step和M-step。
+
+E-step中，我们优化$Q(\theta;\theta^{(t)})$，也就是$Q(\theta;\theta^{(t)}) = E_{z\sim p(z|x;\theta^{(t)})}[\log p(x,z;\theta)]$
+
+M-step中，我们优化$\theta^{(t+1)} = \arg \max_{\theta} Q(\theta;\theta^{(t)})$
+
+核心思想就是：
+
+1. 给出参数$\theta$的初始值
+2. 固定$\theta$，求出$z_i$的**期望**（即使用隐变量表示似然概率的平均值）（E步）
+3. 固定$z_i$，求出$\theta$（M步）
+4. 循环迭代
+5. 直到$\theta$收敛
+
+理论推导：
+
+目标函数可以重写为：
+
+![](img/2025-01-09-17-23-10.png)
+
+KL散度的定义如下：$KL(q||p) = \int q(x) \log \frac{q(x)}{p(x)} dx$，衡量两个分布之间的差异。$KL\geq 0$总是满足，当且仅当两个分布完全相同的时候取0.
+
+按照EM算法的流程去进行运算，总是能让目标对数似然分布单调不降。
+
+### 使用EM训练高斯混合模型
+
+![](img/2025-01-09-17-25-43.png)
+
+![](img/2025-01-09-17-26-04.png)
+
+摘选自：[小橙的博客](https://smallorange666.github.io/2024/10/25/%E6%9C%BA%E5%99%A8%E5%AD%A6%E4%B9%A0%E7%AC%94%E8%AE%B0/)
+
+
+### EM的问题
+
+EM的想法很美好，首先计算后验分布$p(z|x;\theta)$，然后计算相对于$p(z|x;\theta)$,$\log p(x,z;\theta)$的期望。
+
+然后最大化$Q(\theta;\theta^{(t)})$，也就是$Q(\theta;\theta^{(t)}) = E_{z\sim p(z|x;\theta^{(t)})}[\log p(x,z;\theta)]$
+
+但是这三步不是总是能够实现的。
+
+首先这个最大化过程不一定能够实现，比如Q非凸，就能得到局部最优解。第二个问题是$p(z|x;\theta)$不一定有解析解。而且即使有解析解，对数似然函数相对于它的期望也不一定有闭式表达式（可能是一个无穷级数）
+
+所以这种情况下可能就不要把它求出来了，使用SGD进行梯度上升求解是一个可行的方法。
+
+另一个方法是使用马尔科夫链蒙特卡洛方法（MCMC）近似目标函数。
 
 ## Deep Generative Model
 
-...
+生成模型都是一类隐变量模型，两个例子是PCA和GMM：
+
+PCA：$p(z)=\mathcal N (z;0,I)$，$p(x|z)=\mathcal N (x;Wz+\mu,\sigma^2I)$
+
+GMM：$p(z)=Cat(z;\pi)$, $p(x|z)=\prod_{m=1}^M [\mathcal N (x;\mu_m,\sigma_m^2)]^{z_m}$
+
+为了增加模型的表达能力，可以在z和x之间再加入一层神经网络：
+
+![](img/2025-01-09-17-43-51.png)
+
+DGM也是隐变量模型，所以可以使用EM算法进行训练。
+
+正常EM算法的流程是：
+
+1. 获得当前参数下的后验分布$p(z|x;\theta)$
+2. 派生对应的期望$E_{z\sim p(z|x;\theta)}[\log p(x,z;\theta)]$
+3. 最大化期望，获得新的参数$\theta$
+
+但是由于神经网络的存在，第一步和第二步都很难做。所以可以使用VB-EM算法，使用一个简单的分布来逼近真实的后验分布$p(z|x;\theta)$。
+
+VB-EM尝试使用下面的式子最大化对数似然函数下界：
+
+$$
+\mathcal L (x;\theta,\Phi)=\int q_\phi(z|x) \log \frac{p(x,z;\theta)}{q_\phi(z|x)} dz
+$$
+
+$q_\phi(z|x)$是$p(z|x;\theta)$的近似分布，$\Phi$是$q_\phi(z|x)$的参数。
+
+将$p(x,z;\theta)=p_\theta(x|z)p(z)$代入，得到：
+
+![](img/2025-01-09-18-04-50.png)
+
+为了优化这个表达式，需要同时求解变分后验和模型的梯度，因此一般会选择一个比较简单的形式。
+
+比如$p_\theta(x|z)=\mathcal N (x;\mu_\theta(z),I)$, $q_\Phi(z|x)=\mathcal N (z;\mu_\Phi(x),\Sigma_\Phi(x))$
+
+$\mu_\theta$代表的是神经网络的参数，$\Phi$代表后验参数。
+
+![](img/2025-01-09-18-11-31.png)
+
+（这里的w.r.t.是相对于的意思）
+
+回顾上面的表达式选择，由于后验分布选择了简单的高斯分布，所以KL散度有相应的闭式表达，其梯度也容易求。
+
+但是前面的最大似然期望由于神经网络的存在，难以求解。梯度也很难求。现在剩下的问题就是求前面的$\mathcal L (x;\theta,\Phi)$相对于$\theta$和$\Phi$的梯度。
+
+相对于$\theta$的梯度可以使用类似蒙特卡罗采样的方法估计得到（因为$\log p_\theta(x|z)$是关于$\theta$的可微函数）。但是$\Phi$需要结合期望不断更新，没办法这样简单得到。
+
+相对于$\Phi$的梯度需要使用重参数化的技巧。
+
+### 重参数化
+
+![](img/2025-01-09-19-34-49.png)
 
 ## Representation Learning
 
