--- a/docs/Course/机器学习/笔记.md
+++ b/docs/Course/机器学习/笔记.md
@@ -6,9 +6,9 @@ $y = w_0 + w_1x_1 + w_2x_2 + ... + w_nx_n$
 
 损失函数定义为
 
-$L(\mathbf{w}) = \sum_{i=1}^{m}(\mathbf{y_i} - \mathbf{X_i}\mathbf{w})^2$
+$L(\mathbf{w}) = \frac 1 m \sum_{i=1}^{m}(\mathbf{y_i} - \mathbf{X_i}\mathbf{w})^2$
 
-也即$ L(\mathbf{w})=\frac 1 n ||\mathbf{y} - \mathbf{X}\mathbf{w}||^2$
+也即$L(\mathbf{w})=\frac 1 n ||\mathbf{y} - \mathbf{X}\mathbf{w}||^2$
 
 求导，$\nabla_w L(\mathbf{w}) = \frac 2 n \mathbf{X}^T(-\mathbf{y} + \mathbf{X}\mathbf{w})$
 
@@ -84,11 +84,11 @@ $f_i(\mathbf{x}) = softmax_i(\mathbf{W}^T\mathbf{x})=\frac {e^{w_i^T\mathbf{x}}}
 
 y可以视为一个one-hot向量。从而损失函数可以书写如下：
 
-$$L(\mathbf{w_1,w_2,...,w_k}) = - \frac 1 N\sum_{l=1}^n \sum_{k=1}^n \mathbf{y}_k^T \log[softmax_k(\mathbf{W}^T\mathbf{x}_l)]$$
+$$L(\mathbf{w_1,w_2,...,w_k}) = - \frac 1 N\sum_{l=1}^n \sum_{k=1}^K \mathbf{y}_k^T \log[softmax_k(\mathbf{W}^T\mathbf{x}_l)]$$
 
 对损失函数求导得到梯度，交叉熵下的softmax求导性质也很优良，略去推导过程，记忆结论为：
 
-$\nabla_{\mathbf{w_j}} L(\mathbf {w_1, w_2, ... , w_K}) = \frac 1 N \sum_{l=1}^N(softmax_j(\mathbf x^l \mathbf W)-\mathbf y_j^l)\mathbf x^{lT} $
+$\nabla_{\mathbf{w_j}} L(\mathbf {w_1, w_2, ... , w_K}) = \frac 1 N \sum_{l=1}^N(softmax_j(\mathbf x^l \mathbf W)-\mathbf y_j^l)\mathbf x^{lT}$
 
 即LOSS求导后的结果仍然是预测值-实际值再和x相乘。
 
