更新机器学习笔记

--- a/docs/Course/机器学习/生成模型.md
+++ b/docs/Course/机器学习/生成模型.md
@@ -212,6 +212,20 @@ $\mu_\theta$代表的是神经网络的参数，$\Phi$代表后验参数。
 
 PCA可以被视为一个线性的auto-encoder
 
+### AE
+
+自编码器的训练过程是通过最小化输入数据与重构数据之间的误差来进行的。常用的损失函数是均方误差（MSE）或交叉熵损失函数。训练过程可以描述为以下步骤：
+
+输入数据通过编码器得到潜在空间表示。
+
+潜在空间表示通过解码器得到重构数据。
+
+计算输入数据与重构数据之间的误差。
+
+通过反向传播算法更新编码器和解码器的参数，以最小化误差。
+
+变种：卷积神经网络AE，变分自编码器VAE，稀疏自编码器，去噪自编码器。
+
 ### VAE
 
 **变分自编码器（Variational Autoencoder, VAE）** 是一种生成模型，属于概率图模型与深度学习结合的范畴。VAE 不仅能够进行降维和特征提取，还能够生成数据，同时保留输入数据的概率分布信息。
