--- a/docs/Course/机器学习/笔记.md
+++ b/docs/Course/机器学习/笔记.md
@@ -600,6 +600,29 @@ K值选取的考量：
 - K过小：欠拟合，簇内差异大（不同类强行合并到一个），信息丢失，无法反映真实分布
 - K过大：过度分割，簇间差异不明显，对噪声和异常值更加敏感，导致聚类结果不稳定，解释性差
 
+## KNN
+
+KNN是一种非参数的分类算法，通过计算样本点之间的距离来确定样本点的类别。
+
+Requires three things
+
+- The set of labeled records
+- Distance Metric to compute distance between records
+- The value of k, the number of nearest neighbors to retrieve
+
+To classify an unknown record:
+
+1. Compute distance to other training records
+2. Identify k nearest neighbors 
+3. Use class labels of nearest neighbors to determine the class label of unknown record (e.g., by taking majority vote, or weighted majority vote)
+
+k的选择：
+
+- 太小，噪声敏感
+- 太大，分类不准确（可能包含其他类的点）
+
+距离上，不同属性的尺度不同，可能需要拉伸以确保距离计算的公平性。
+
 ## 推荐系统
 
 推荐系统的**主要目的**是通过分析用户的行为和偏好，向用户提供个性化的内容或物品建议，从而提升用户体验和满意度。
@@ -619,6 +642,8 @@ K值选取的考量：
 对于第一个问题：有两种方法，显示要求评分（这并不太可能实现），还有隐式的收集，从用户的行为中学习排序
 
 对于第二个问题：Utility Matrix有几个特点，一是Sparsity（稀疏），二是Cold Start（数据有限），三是新物品或新用户的加入时如何推荐
+
+基于内容的推荐，由于根据的是物体本身特征的相似性，并不依赖于评分，所以不需要效用矩阵U。而协同过滤需要其他用户的评分（无论是U-U协同过滤还是I-I协同过滤）
 
 ### 基于内容的推荐
 
@@ -721,3 +746,42 @@ P@K：推荐列表中前K个物品中，用户喜欢的概率
 可以这样子划分测试集
 
 ![](img/2025-01-01-00-22-10.png)
+
+## 检索评估
+
+有precision和recall，还有F1 score的评价指标，F1是综合前两者的一个指标。
+
+![](img/2025-01-11-14-34-57.png)
+
+$F_1 = \frac {2 \times precision \times recall} {precision + recall}$
+
+F接近1，说明效果越好。F接近0，说明效果越差。F是调和平均数，取值范围在0-1之间。
+
+再加入一个ranking的评价指标：P@K，推荐列表中前K个物品中，用户喜欢的概率。
+
+以及Mean Average Precision，MAP，平均准确率。
+
+Mean Reciprocal Rank，MRR，平均倒数排名。
+
+还有NDCG，Normalized Discounted Cumulative Gain，归一化折损累积增益。
+
+P@K:计算Top K中的准确率。
+
+![](img/2025-01-11-14-37-22.png)
+
+MAP就是P@K的平均值。（只计算每个最后一个是正确的）
+
+![](img/2025-01-11-14-38-08.png)
+
+注意看这个图，图里面两个红色的点不计算。
+
+然后还可以对不同的查询计算MAP，再求这些MAP的平均值。
+
+DCG：Discounted Cumulative Gain，折损累积增益。
+
+![](img/2025-01-11-14-43-51.png)
+
+NDCG就是对DCG做归一化，除掉理想的IdCG，也就是顺序排列的DCG。
+
+![](img/2025-01-11-14-46-37.png)
+
